--- a/a.html
+++ b/a.html
@@ -54,7 +54,7 @@
     fetchData();
 
     // Set up auto-update every 60 seconds (adjust as needed)
-    setInterval(fetchData, 10000);
+    setInterval(fetchData, 6000000);
 </script>
 
 <body>
