--- a/u.html
+++ b/u.html
@@ -84,7 +84,10 @@
         // Redirect to u.html after 1 minute
         setTimeout(function() {
             window.location.href = 'dbms.html';
-        }, 20000); // 1 minute = 60,000 milliseconds
+        }, 20000); // 1 minute = 60,000 millisecond
     </script>
 </body>
 </html>
+
+
+
