--- a/dbms.html
+++ b/dbms.html
@@ -133,7 +133,7 @@
     <!-- <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a> -->
 <!-- </marquee> -->
 
-<a href="daa_important.html">DAA Important</a>&nbsp;<a href="mech_mcq.html">Mechanics MCQ</a>
+<a href="daa_important.html">DAA Important</a>&nbsp;<a href="mech_mcq.html">Assignment Questions DAA</a>
 <hr>
  
 <body>
