--- a/dbms.html
+++ b/dbms.html
@@ -47,6 +47,11 @@
     position: relative;
   }
 </style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -102,39 +107,51 @@
             console.error('Error during fetch:', error);
         });
       </script>
-    <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
-      <div class="container-fluid">
-        <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="logo.png" id="imglogo">
-          <span class="fs-4 mr-5 lo" ><h2 class="bold-text">Helpdesk</h2></span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
-            <li class="nav-item"><a href="dbms.html" class="nav-link">DBMS</a></li>
-            <li class="nav-item"><a href="mech_updated.html" class="nav-link">Mechanics</a></li>
-            <li class="nav-item dropdown" id="myDropdown">
-              <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OOPS</a>
-              <ul class="dropdown-menu" data-bs-popper="static">
-                <li><a class="nav-link dropdown-item" href="object_updated.html">Code</a></li>
-                <li><a class="nav-link dropdown-item" href="oops notes_updated.html">Notes</a></li>
-              </ul>
+      <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
+        <div class="container-fluid">
+          <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="logo.png" id="imglogo">
+            <span class="fs-4 mr-5 lo"><h2 class="bold-text">Helpdesk</h2></span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
+              <!-- Sem1 -->
+              <li class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 3</a>
+                <ul class="dropdown-menu">
+                  <!-- Add subjects for Sem1 here -->
+                  <li><a class="nav-link dropdown-item" href="dbms.html">DBMS</a></li>
+                  <li><a class="nav-link dropdown-item" href="mech_updated.html">Mechanics</a></li>
+                  <li><a class="nav-link dropdown-item" href="object_updated.html">OOPS Code</a></li>
+                  <li><a class="nav-link dropdown-item" href="daa_updated.html">DAA</a></li>
+                </ul>
               </li>
-              <li class="nav-item"><a href="daa_updated.html" class="nav-link">DAA</a></li>
+              <!-- Sem2 -->
+              <li class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 4</a>
+                <ul class="dropdown-menu">
+                <li><a class="nav-link dropdown-item" href="python.html">Python</a></li>
+                <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
+                <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
             </ul>
-        </div></div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </header>
+      
+      
 <div id="body">
-    <center><div id="wishing_part"><b>Welcome</b></div></center>
- <hr>
+   
  <!-- <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a> -->
     <!-- <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a> -->
 <!-- </marquee> -->
 
-<a href="sanskrit.html">Sanskrit Important</a>&nbsp;<a href="mech_mcq.html">Assignment Questions DAA</a>
-<hr>
+<!-- <a href="sanskrit.html">Sanskrit Important</a>&nbsp;<a href="mech_mcq.html">Assignment Questions DAA</a> -->
+<!-- <hr> -->
  
 <body>
     <center><h1>Database Managment Systems Viva Questions</h1></center>
@@ -255,7 +272,7 @@
     }
 </style>
 </head>
-<div id="main">
+<!-- <div id="main">
     <div id="box">
         <div id="right" onclick="close1()">
             <i class="fa fa-times" aria-hidden="true"></i>
@@ -280,7 +297,7 @@
         <input type="text" name="data[time]" id="time">
         <input type="submit" name="subme" id="subme">
     </form>
-</div>
+</div> -->
 <script>
     var form = document.getElementById('sheetdb-form');
 form.addEventListener("submit", e => {
