--- a/os.html
+++ b/os.html
@@ -54,7 +54,7 @@
               <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
               <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
               <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
-        </ul>
+              <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>        </ul>
           </li>
         </ul>
       </div>
