--- a/archi.html
+++ b/archi.html
@@ -28,7 +28,7 @@
       width:300px;
       transition:transform .2s ease-in-out;
   }
-      #img1:hover{transform:scale(1.2);cursor:zoom-in}
+      #img1:hover{transform:scale(1.055);cursor:zoom-in}
       h3{
       margin-left: 0 !important;
       }
@@ -62,10 +62,11 @@
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 4</a>
             <ul class="dropdown-menu">
-            <li><a class="nav-link dropdown-item" href="python.html">Python</a></li>
-            <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
-            <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
-            <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
+              <li><a class="nav-link dropdown-item" href="python.html">Python</a></li>
+              <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
+              <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
+              <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
+              <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>
         </ul>
           </li>
         </ul>
@@ -102,6 +103,7 @@
             <li><b>Arithematics Logic Unit: </b> The Arithematics Logic unit is that part of the C.P.U that handles all the calculations, the C.P.U mainly. <br> Ex -  Addition, Substraction, etc. <br>
             It performs logical operations such bitshifting operation, comparisions, etc.</li>
           </ol>
+
         </section>
       </div>
 </html>
