--- a/web_tech.html
+++ b/web_tech.html
@@ -52,10 +52,10 @@
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 4</a>
             <ul class="dropdown-menu">
               <li><a class="nav-link dropdown-item" href="python.html">Python</a></li>
-              <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
-              <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
-              <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
-        </ul>
+            <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
+            <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
+            <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
+            <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>        </ul>
           </li>
         </ul>
       </div>
