--- a/archi.html
+++ b/archi.html
@@ -49,6 +49,19 @@
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
           <!-- Sem1 -->
           <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 1</a>
+            <ul class="dropdown-menu">
+                <li><a class="nav-link dropdown-item" href="sem1/c_language.html">C-Language</a></li>
+                             
+             </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 2</a>
+            <ul class="dropdown-menu">
+                <li><a class="nav-link dropdown-item" href="sem2/data_structure.html">Data Structure</a></li>
+                </ul>
+          </li>
+          <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 3</a>
             <ul class="dropdown-menu">
               <!-- Add subjects for Sem1 here -->
@@ -62,12 +75,12 @@
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 4</a>
             <ul class="dropdown-menu">
-              <li><a class="nav-link dropdown-item" href="python.html">Python</a></li>
-              <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
-              <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
-              <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
-              <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>
-        </ul>
+                <li><a class="nav-link dropdown-item" href="python.html">Python</a></li>
+                <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
+                <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
+                <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
+                <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>     
+            </ul>
           </li>
         </ul>
       </div>
