--- a/archi.html
+++ b/archi.html
@@ -128,7 +128,7 @@
     <p><b>Memory hierarchy:</b></p>
 
     <!-- Placeholder for image source -->
-    <img src="path/to/your/image.jpg" alt="Memory Hierarchy Image">
+    <img id="img1" src="img/MemoryHierarchy.png" alt="Memory Hierarchy Image">
 
     <p><b>Random Access Memory (RAM):</b> RAM is volatile memory used by the computer to store data that allows access to the storage medium, and its contents are lost when the computer is powered off.</p>
 
