--- a/web_tech.html
+++ b/web_tech.html
@@ -77,10 +77,21 @@
   </header>
   
     <div id="body">
-      <div id="up">
-        <a href="#" id="goToTopButton" class="go-to-top-button">
-          <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
-      </a>
-      </div>  
+      
+
+      <center><h1>Web Technology</h1></center>
+
+      <b>WWW</b> - The world wide web is an application that run the internet and its application.
+      <br>
+      There are several types of browsers such as nextstep navigator, mozilla, firefox, internet exprorer are the hyperlink through world wide web.
+      <br><br>There are five layer exist in TCP/IP : 
+      <ol type="1">
+        <li><b>Physical Layer - </b> This layer deals with the hardware connectivity, voltage, etc..</li>
+        <li><b>Data Link Layer - </b> It is also very similar to the other network model. This cover mac ( media access control ) that is how can send the data when needed. This also deals with frame formats. </li>
+        <li><b>Internet Layer - </b> It is very important from the context of communication over ans internal. THis layer function with format of datagram as define in IP and also about the mechanism of forwarding the datagram from source computer to the final destination via one or more route.</li>
+        <li><b>Transport Layer - </b> There are two main protocols in this layer TCP and UTP ensure that communication between the sender and reciever is relaible, even from </li>
+      </ol>
+      </div>
+
     
 </html>
