--- a/python.html
+++ b/python.html
@@ -39,14 +39,14 @@
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 1</a>
             <ul class="dropdown-menu">
-                <li><a class="nav-link dropdown-item" href="sem1/c_language.html">C-Language</a></li>
+                <li><a class="nav-link dropdown-item" href="c_language.html">C-Language</a></li>
                              
              </ul>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 2</a>
             <ul class="dropdown-menu">
-                <li><a class="nav-link dropdown-item" href="sem2/data_structure.html">Data Structure</a></li>
+                <li><a class="nav-link dropdown-item" href="data_structure.html">Data Structure</a></li>
                 </ul>
           </li>
           <li class="nav-item dropdown">
