--- a/web_tech.html
+++ b/web_tech.html
@@ -79,7 +79,17 @@
       
 
       <center><h1>Web Technology</h1></center>
+      <b>Web Server : </b>Web communicatation takes place between a client process and the web server. The server process creates a socket and client process access the server through the socket mechanism.<br>
+      <ol type="1">
+        <li>HTTP server process is created on a port, which wait for clients to establish TCP (Transmission Control Protocol) connection.  </li>
+        <li>An HTTP client initiate a TCP connection with HTTP server at the deginated port.</li>
+        <li>The HTTP server accept this connection.</li>
+        <li>The HTTP client send a request for a resources to the server.</li>
+        <li>The HTTP server closes the TCP connection.</li>
+        <li>The HTTP client receive the response containing information and process it.</li>
 
+        
+      </ol>
       <b>WWW</b> - The world wide web is an application that run the internet and its application.
       <br>
       There are several types of browsers such as nextstep navigator, mozilla, firefox, internet exprorer are the hyperlink through world wide web.
