--- a/web_tech.html
+++ b/web_tech.html
@@ -98,8 +98,17 @@
         <li><b>Physical Layer - </b> This layer deals with the hardware connectivity, voltage, etc..</li>
         <li><b>Data Link Layer - </b> It is also very similar to the other network model. This cover mac ( media access control ) that is how can send the data when needed. This also deals with frame formats. </li>
         <li><b>Internet Layer - </b> It is very important from the context of communication over ans internal. THis layer function with format of datagram as define in IP and also about the mechanism of forwarding the datagram from source computer to the final destination via one or more route.</li>
-        <li><b>Transport Layer - </b> There are two main protocols in this layer TCP and UTP ensure that communication between the sender and reciever is relaible, even from </li>
+        <li><b>Transport Layer - </b> There are two main protocols in this layer TCP and UTP. TCP ensure that communication between the sender and reciever is relaible, error free and is sequence however UTP does not offer relaiblity. Hence, TCP is a connection oriented protocol and VTP is a connectionless protocol. </li>
+        <li><b>Application Layer - </b> It allows and end user to run various applications on the internet and used the internet in the different way. These applications are FTP(File transfer protocol), SMTP(Simple main transfer protocol), TFTP(TRival file transfer protocol), HTTP(HYper text transfer protocol).</li>
       </ol>
+
+      <br>
+      <b>UNIX/LINUX Server : </b><br>
+      A Linux/Unix is a server running varient of Linux open source operating system. It is design to handle the most demanding bussiness applications such as web services and databases. <br>
+      Linux/Unix is a server provides a strong foundation for complex, interprice level data center and workload environment ranging from baremetal to the virtual machine and container including private or public clouds. It is open source software OS beat around the linux/unix kernal.
+      <br><br>
+      Linux is also leading operating system on server and popular on main frame and super computer. <br>
+      Linux server have virtually no downtimes it gives software developer a degree of control when creating software-as-a-service tools or live applications including the activity to handle multiple application on a single server. 
       </div>
 
     
