--- a/archi.html
+++ b/archi.html
@@ -191,6 +191,6 @@
     <p><b>IC:</b> Instruction cycle</p>
     <p><b>FC:</b> Fetch cycle</p>
     <p><b>EC:</b> Execute cycle</p>
-
+    <img src="img/instruction_cycle.png" alt="Error" id="img1">
 </body>
 </html>
