--- a/os.html
+++ b/os.html
@@ -114,5 +114,25 @@
           <br><br>
           <img src="img/multiprogramming.jpg" alt="" id="img1">
       </ol>
-    
+      <br>
+      <b>Advantages of Multiprogramming are : </b>
+      <ol type="I">
+        <li>high CPU utilization</li>
+        <li>increased throughout and efficient system use</li>
+        </ol>
+        <b>Disadvantages of multiprogramming are : </b>
+        <ol type="1">
+          <li>CPU Scheduling</li>
+          <li>job scheduling</li>
+          <li>Memory Management</li>
+        </ol>
+    <br>
+    <h3><b>Time Sharing System</b></h3>
+    Both batch system and multiprogramming system worked in non-interactive environment, means the user of the system has no direct interaction with the system when the program is being executed. So there was a need for interactive computing environment so that user of the computer system can provide input with the help input devices and can see the output on the computer monitor. Time sharing system is the enhancement of multiprogramming system to provide this interactive user environment. TIme sharing is also multitasking system. In time sharing system two or more users are allowed to share the system. The users interact withe the system through their seperate monitor terminals. The user programs are stored in computer memory. The operating system assigns time interval called time-slice to each programs stored in memory associated with different users. The operating system uses CPU scheduling (CPU scheduling is decision making how to assign CPU time efficiently to different user programs stored in memory for execution) to switch the CPU time among different user programs. 
+    <br> <br>
+    <h3><b>Real Time System</b></h3>
+    Real Time Systems are the systems designed to work in environment where processing is to be done within bounded time constraint otherwise there are several consequences and even system failure. Real-time systems are used in real-time applications or in embedded systems. Some examples of real time applications are : fire control system, nuclear plants control system, air defence system, industrial control system, nuclear plants control system, flight control system, modern automobile containing an embedded systems etc. Since real time systems are used to handle real time applications so the proper functioing of real time system is based on time bounded processing as well as correct result.
+
+
+    </div>
 </html>
