--- a/archi.html
+++ b/archi.html
@@ -174,7 +174,7 @@
 
     <p><b>Computer register:</b></p>
 
-    <img src="img/80.jpg" alt="Computer Register Image" width="450px">
+    <img src="img/80.jpg" alt="Computer Register Image" id="img1">
 
     <p>1. <b>OUTR (8-bit):</b> It holds the output character.</p>
     <p>2. <b>IMPR (8-bit):</b> It holds the input character.</p>
