--- a/math.html
+++ b/math.html
@@ -256,6 +256,29 @@
             &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | x∈(A<sup>c</sup> &Union;B<sup>c</sup> )}<br>
             &DoubleRightArrow; &therefore; (A&Intersection;B)<sup>c</sup> = A<sup>c</sup>&Union;B<sup>c</sup>
 
+
+		  agasdfgadfgadfgag
+              <li><b>Complement law - </b><br>
+                i. A&Union;A<sup>c</sup> = U <br>
+                ii.  A&Intersection;A<sup>c</sup> = &emptyset;
+              </li>
+            </ol>
+           <b> Q. Use set builder notation and logical equivalent to establish the first and second De-Morgans law.<br>
+            sol- <br></b>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | x∉(A&Intersection;B)}<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | &not;(x∈(A&Intersection;B))}<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | &not;(x∈(A &and; B))}<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | &not;(x∈A &and; x∈B) }<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | &not;(x∈A) &or; &not;(x∈B)}<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | x∉A &or; x∉B}<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | x∈A<sup>c</sup> &or; x∈B<sup>c</sup>)}<br>
+            &DoubleRightArrow; (A&Intersection;B)<sup>c</sup> = {x | x∈(A<sup>c</sup> &Union;B<sup>c</sup> )}<br>
+            &DoubleRightArrow; &therefore; (A&Intersection;B)<sup>c</sup> = A<sup>c</sup>&Union;B<sup>c</sup>
+
+
+
+            aghl;agjlkfkl;agnklafadgagffd
+
          
         </section>
       </div>
