--- a/archi_lab.html
+++ b/archi_lab.html
@@ -100,7 +100,7 @@
       </div>  
       <div>
         <section>
-          <center><h1>OS Lab</h1></center>
+          <center><h1>Comp. Architecture Lab</h1></center>
 
 
          
