--- a/web_tech_lab.html
+++ b/web_tech_lab.html
@@ -100,7 +100,7 @@
       </div>  
       <div>
         <section>
-          <center><h1>OS Lab</h1></center>
+          <center><h1>Web Technologies Lab</h1></center>
 
 
          
