--- a/dbms.html
+++ b/dbms.html
@@ -151,6 +151,10 @@
                     <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
                     <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
                     <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>     
+                    <li><a class="nav-link dropdown-item" href="archi_lab.html">Comp. Architecture Lab</a></li>
+                    <li><a class="nav-link dropdown-item" href="web_tech_lab.html">Web Technologies Lab</a></li>
+                    <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
+                </ul>
                 </ul>
               </li>
             </ul>
