--- a/math.html
+++ b/math.html
@@ -272,7 +272,7 @@
               &DoubleRightArrow; (A&Union;B)<sup>c</sup> = {x | x∈(A<sup>c</sup> &Intersection;B<sup>c</sup> )}<br>
               &DoubleRightArrow; &therefore; (A&Union;B)<sup>c</sup> = A<sup>c</sup>&Intersection;B<sup>c</sup><br><br>
 
-            <b> Q. Let A,B and C be sets. Show that A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup> 
+            <b> Q. Let A,B and C be sets. Show that A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup> <br>
               sol- <br></b>
               A&Union;(B&Intersection;C)<sup>c</sup> <br> = (A)<sup>c</sup>&Intersection;(B&Intersection;C)<sup>c</sup>     [by De-morgans law] <br>
               A&Union;(B&Intersection;C)<sup>c</sup> <br> = (B&Intersection;C)<sup>c</sup>&Intersection;(A)<sup>c</sup>     [by Commutative law] <br>
@@ -282,7 +282,7 @@
             <li><b>The Inclusion-Exclusion principles -<br></b>
               Let, A and B be any finite sets.<br>
               Then, n(A&Union;B) = n(A) + n(B) - n(A&Intersection;B)<br>
-              also, n(A&Union;B&Union;C) = n(A) + n(B) + n(C) - n(A&Intersection;B) - n(A&Intersection;C) - n(B&Intersection;C) + n(A&Intersection;B&Intersection;C)<br><br>
+              also, n(A&Union;B&Union;C) = n(A) + n(B) + n(C) - n(A&Intersection;B) - n(A&Intersection;C) - n(B&Intersection;C) + n(A&Intersection;B&Intersection;C)<br>
               <b>Eg-<br>
              Find the number of student at a college taking alteast one of the languages French, German and Russian given the following data. Total number of 
               student taking is 120. 65 study French, 45 study German, 42 study Russian, 20 study French and German, 25 study French and Russian, 15 study German and Russian,
