--- a/web_tech.html
+++ b/web_tech.html
@@ -144,10 +144,10 @@
     Linux is also leading operating system on server and popular on main frame and super computer. <br>
     Linux server have virtually no downtimes it gives software developer a degree of control when creating software-as-a-service tools or live applications including the activity to handle multiple application on a single server. 
     
-   <img src="img\pic 2.jpeg" alt="" srcset="">
+   <img src="img\pic 2.jpeg" alt="" srcset="" id = "img1">
    <br></ol><br>>
 
-   <img src="img\pic01.jpeg" alt="" srcset="">
+   <img src="img\pic01.jpeg" alt="" srcset="" id = "img1">
   
   </ol>
 
