--- a/web_tech.html
+++ b/web_tech.html
@@ -7,7 +7,19 @@
     <title>Helpdesk</title>
 </head>
 <script
-  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+ <style>
+#img1{
+    width:300px;
+    transition:transform .2s ease-in-out;
+}
+    #img1:hover{transform:scale(1.2);cursor:zoom-in}
+    h3{
+    margin-left: 0 !important;
+    }
+
+
+
+</style> src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
   integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
   crossorigin="anonymous"
 ></script>
