--- a/nk.html
+++ b/nk.html
@@ -7,18 +7,19 @@
 
     </head>
     <body>
-        <div class="container">
-            <h1>* CONTROBUTERS *</h1>
-            <ul>
-                <li><div class="title">   </div></li>
-                <li><div class="title">   </div></li>
-                <li><div class="title">    </div></li>
-                <li><div class="title">   </div></li>
-                <li><div class="title">   </div></li>
-                <li><div class="title">  </div></li>
-                <li><div class="title">  </div></li>
-                <li><div class="title">  </div></li>
-            </ul>
+        <h1 class="header">* CONTRIBUTERS *</h1>
+        <div class="container1">
+           <div class="pic">
+            <h2>NAME: HARSH KUMAR<br>
+            WORK ASSIGN: OS LAB</h2>
+           </div>
+           <div class="pic"></div>
+           <div class="pic"></div>
+           <div class="pic"></div>
+           <div class="pic"></div>
+           <div class="pic"></div>
+           <div class="pic"></div>
+           <div class="pic"></div>
         </div>
         <footer>
             <p>Copyright © 2024 Debuggers. All rights reserved.</p>
