--- a/nk.html
+++ b/nk.html
@@ -9,17 +9,22 @@
     <body>
         <h1 class="header">* CONTRIBUTERS *</h1>
         <div class="container1">
-           <div class="pic">
-            <h2>NAME: HARSH KUMAR<br>
-            WORK ASSIGN: OS LAB</h2>
-           </div>
-           <div class="pic"></div>
-           <div class="pic"></div>
-           <div class="pic"></div>
-           <div class="pic"></div>
-           <div class="pic"></div>
-           <div class="pic"></div>
-           <div class="pic"></div>
+            <div class="border_sq">
+                <div class="pic"></div>
+                    <h2 class="name">HARSH KUMAR</h2>
+                    <h2 class="proj">OS LAB</h2>
+            </div>
+            <div class="border_sq">
+                <div class="pic"></div>
+                    <h2 class="name">HARSH KUMAR</h2>
+                    <h2 class="proj">OS LAB</h2>
+            </div>
+            <div class="border_sq">
+                <div class="pic"></div>
+                    <h2 class="name">HARSH KUMAR</h2>
+                    <h2 class="proj">OS LAB</h2>
+            </div>
+          
         </div>
         <footer>
             <p>Copyright © 2024 Debuggers. All rights reserved.</p>
