--- a/web_tech.html
+++ b/web_tech.html
@@ -6,7 +6,7 @@
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Helpdesk</title>
 </head>
-<script
+
  <style>
 #img1{
     width:300px;
@@ -17,9 +17,8 @@
     margin-left: 0 !important;
     }
 
-
-
-</style> src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+</style>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
   integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
   crossorigin="anonymous"
 ></script>
@@ -80,12 +79,18 @@
                 <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
                 <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
                 <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>     
+                <li><a class="nav-link dropdown-item" href="archi_lab.html">Comp. Architecture Lab</a></li>
+                <li><a class="nav-link dropdown-item" href="web_tech_lab.html">Web Technologies Lab</a></li>
+                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
+            </ul>
+            <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </header>
+  
   
     <div id="body">
       
