--- a/data_structure.html
+++ b/data_structure.html
@@ -73,6 +73,7 @@
                 <li><a class="nav-link dropdown-item" href="web_tech_lab.html">Web Technologies Lab</a></li>
                 <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
             </ul>
+            <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
             </ul>
           </li>
         </ul>
