--- a/python.html
+++ b/python.html
@@ -67,16 +67,19 @@
                 <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
                 <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
                 <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
-                <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li> 
+                <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>     
                 <li><a class="nav-link dropdown-item" href="archi_lab.html">Comp. Architecture Lab</a></li>
                 <li><a class="nav-link dropdown-item" href="web_tech_lab.html">Web Technologies Lab</a></li>
-                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>    
+                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
+            </ul>
+            <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </header>
+  
   <script>
     fetch("json/python.json")
     .then(function(response) {
