--- a/math.html
+++ b/math.html
@@ -321,7 +321,7 @@
               bit string of {1,2,3,4,5} &or; {1,3,5,7,9} = A&Union;O = {1,2,3,4,5,7,9}<br>
               bit string = 1111101010<br>
               bit string of {1,2,3,4,5} &and; {1,3,5,7,9} = A&Intersection;O = {1,3,5}<br>
-              bit string = 1010100000<br>
+              bit string = 1010100000<br><br>
 
               <h4><b><u><li>Function -</li></u></b></h4>
               Function is a special type of relation from a set A to set B such that every element of A has a 
@@ -347,12 +347,12 @@
                 <center><b>if f (a) = f '(a) <br>
                 &DoubleRightArrow; a=a</b></center><br>
 
-            <li><b>Onto function -</b></li><br>
+            <li><b>Onto function -</b></li>
                A function f : A&rightarrow;B is said to be  an onto function (surjective) if each
                element of B (co-domain) is the image of some element of A i.e. f : A&rightarrow;B
                is onto if the image of f is the entire co-domain (f (A) = B).<br><br>
             
-            <li><b>Invertible function -</b></li><br>
+            <li><b>Invertible function -</b></li>
                A function f : A&rightarrow;B  is invertible if its inverse relation f <sup>-1</sup>
                ia a function f : B&rightarrow;A. For being a invertible function f must be one to one and onto.
                <br><br>
