--- a/archi_lab.html
+++ b/archi_lab.html
@@ -269,11 +269,11 @@ These are the status signals that provide the status of operation, which is used
 When this signal is active, it indicates to the other processors not to ask the CPU to leave the system bus. It is activated using the LOCK prefix on any instruction and is available at pin 29.<br>
 <b>RQ/GT1 and RQ/GT0</b><br>
 These are the Request/Grant signals used by the other processors requesting the CPU to release the system bus. When the signal is received by CPU, then it sends acknowledgment. RQ/GT0 has a higher priority than RQ/GT1.<br>
-<img scr="img/block_dig.jpg" id="img1">
+<img src="img/block_dig.jpg" id="img1">
 
 
          
-
+      </div>
 </body>
 </html>
 
