--- a/archi_lab.html
+++ b/archi_lab.html
@@ -233,7 +233,10 @@ These are the status signals that provide the status of operation, which is used
     <td>Status</td>
   </tr>
   <tr>
-    <td>0</td>ead</td>
+    <td>0</td>
+    <td>0</td>
+    <td>0</td>
+    <td>Interrupt acknowledgement</td>
       </tr>
       <tr>
         <td>0</td> 
