--- a/archi_lab.html
+++ b/archi_lab.html
@@ -75,7 +75,7 @@
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 4</a>
             <ul class="dropdown-menu">
-                <li><a class="nav-link dropdown-item" href="python.html">Pythojgtjn</a></li>
+                <li><a class="nav-link dropdown-item" href="python.html">Pythfrfon</a></li>
                 <li><a class="nav-link dropdown-item" href="os.html">OS</a></li>
                 <li><a class="nav-link dropdown-item" href="web_tech.html">Web Technologies</a></li>
                 <li><a class="nav-link dropdown-item" href="archi.html">Comp. Architecture</a></li>
@@ -85,8 +85,8 @@
                 <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
             </ul>
             <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
-            </ul>
-          </li>
+            </ul> 
+          </li> 
         </ul>
       </div>
     </div>
