--- a/archi_lab.html
+++ b/archi_lab.html
@@ -276,7 +276,7 @@ These are the Request/Grant signals used by the other processors requesting the 
 
 
          
-      </div>
+      </div><br>
 </body>
 </html>
 
