--- a/archi_lab.html
+++ b/archi_lab.html
@@ -193,7 +193,7 @@ It stands for Hold Acknowledgement signal and is available at pin 30. This signa
 <b>HOLD</b><br>
 This signal indicates to the processor that external devices are requesting to access the address/data buses. It is available at pin 31.<br>
 <b>QS1 and QS0</b><br>
-These are queue status s
+These are queue status signals and are available at pin 24 and 25. These signals provide the status of instruction queue. Their conditions are shown in the following table-<br><br>
   <tr>
     <td>QS</td>
     <td>QS</td>
@@ -223,8 +223,8 @@ These are queue status s
 </table >
 
 <br><br>
-<b>S0, S1, S2</b><br> 
-These are the status signals that provide the status of operation, which is used by the Bus Controller 8288 to generate memory & I/O control signals. These are available at pin 26, 27, and 28. Following is the table showing their status −<br><br>
+<b>S0, S1, S2</b><br><br>
+These are queue status status signals that provide the status of operation, which is used by the Bus controller 8288 to generate memory & I/O control signals. These are available at pin 26,27, and 28. Following is the table showingtheir status-<br><br>	      
 
 <table>
   <tr> 
