--- a/dbms.html
+++ b/dbms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -415,4 +415,4 @@ if (!invis) {
 </script>
 
 </body>
-</html>
+</html> -->
